# sliding-puzzle

./: Cargo.toml  README.md
src/: draw.rs  main.rs  player.rs  shuffle.rs  util.rs
