[package]
name = "sliding-puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = { version = "0.27.0", features = ["events"] }
once_cell = "1.19.0"

[profile.release]
opt-level = "z"
